apps/recipe-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-api
  namespace: recipe-api
spec:
  selector:
    app: recipe-api
  ports:
    - port: 80
      targetPort: 8080
